fixes #728