@@ -11,4 +11,25 @@
   <dependencies>
 
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.11.0</version>
+        <configuration>
+          <source>20</source>
+          <target>20</target>
+          <encoding>UTF-8</encoding>
+          <compilerArgs>
+            <arg>--add-modules=jdk.jcmd</arg>
+            <arg>--add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED</arg>
+            <arg>--add-exports=jdk.jcmd/sun.tools.jps=ALL-UNNAMED</arg>
+            <arg>--add-exports=jdk.jcmd/sun.tools.jstat=ALL-UNNAMED</arg>
+            <arg>--add-exports=jdk.jcmd/sun.tools.jstack=ALL-UNNAMED</arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
